added an h2 as well as a paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Welcome to my Awesome Site!</h1>
+    <h2>This is the Subheader on my Awesome Site!</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore maiores, dicta obcaecati repellendus deleniti autem neque culpa quae unde nisi, quasi enim voluptatibus. Error aspernatur nam ullam atque minus. Doloribus temporibus nesciunt nulla aut veniam modi, eius ab ex voluptatum.</p>
 </body>
 </html>
